# C_Cpp_lib_template

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
src/: lib.c  lib.h  lib_internal.h
tests/: CMakeLists.txt  lib_test.cpp
tests/cfg_ut/: CMakeLists.txt  lib_cfg.h
